Build: (2a83cf0) Merge pull request #30 from KoiFresh/feature/api-v1
Feature/api v1

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '3712232189';
+    var serviceWorkerVersion = "859202243";
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
